[gd_scene load_steps=3 format=3 uid="uid://cy8o34apymn2s"]

[ext_resource type="Script" uid="uid://dt8vk5pm2xsaw" path="res://scenes/minigames/port_scanner/port_scanner_defender.gd" id="1"]
[ext_resource type="Resource" uid="uid://b3gu5qyjtacno" path="res://resources/minigames/port_scanner/port_scan_database.tres" id="2"]

[node name="PortScannerDefender" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")
scan_database = ExtResource("2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -550.0
offset_top = -400.0
offset_right = 550.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="VidasLabel" type="Label" parent="Panel/VBoxContainer/TopBar"]
layout_mode = 2
text = "‚ù§Ô∏è Vidas: 3"
horizontal_alignment = 1

[node name="PuntosLabel" type="Label" parent="Panel/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "‚≠ê Puntos: 0"
horizontal_alignment = 1

[node name="ProgresoLabel" type="Label" parent="Panel/VBoxContainer/TopBar"]
layout_mode = 2
text = "üîç Scan: 1/18"
horizontal_alignment = 1

[node name="TimerLabel" type="Label" parent="Panel/VBoxContainer/TopBar"]
layout_mode = 2
text = "Tiempo: 09:00"
horizontal_alignment = 1

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "üîç PORT SCANNER DEFENDER üõ°Ô∏è"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Instrucciones" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Analiza cada actividad de red y determina si es LEG√çTIMA o MALICIOSA"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ScanInfo" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="IPLabel" type="Label" parent="Panel/VBoxContainer/ScanInfo"]
layout_mode = 2
text = "IP Origen: 192.168.1.100"

[node name="PortLabel" type="Label" parent="Panel/VBoxContainer/ScanInfo"]
layout_mode = 2
text = "Puerto: 443 (HTTPS)"

[node name="ProtocolLabel" type="Label" parent="Panel/VBoxContainer/ScanInfo"]
layout_mode = 2
text = "Protocolo: TCP"

[node name="ScanTypeLabel" type="Label" parent="Panel/VBoxContainer/ScanInfo"]
layout_mode = 2
text = "Tipo: Conexi√≥n normal"

[node name="PacketLabel" type="Label" parent="Panel/VBoxContainer/ScanInfo"]
layout_mode = 2
text = "Paquetes: 15"

[node name="TimeLabel" type="Label" parent="Panel/VBoxContainer/ScanInfo"]
layout_mode = 2
text = "Tiempo: 5 minutos"

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="DescriptionContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DescriptionTitle" type="Label" parent="Panel/VBoxContainer/DescriptionContainer"]
layout_mode = 2
text = "Descripci√≥n de la actividad:"

[node name="DescriptionLabel" type="Label" parent="Panel/VBoxContainer/DescriptionContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Descripci√≥n aparecer√° aqu√≠"
autowrap_mode = 3

[node name="HintContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="HintLabel" type="Label" parent="Panel/VBoxContainer/HintContainer"]
layout_mode = 2
text = "üí° Pista aparecer√° aqu√≠"
autowrap_mode = 3

[node name="ResultadoLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Resultado aparecer√° aqu√≠"
autowrap_mode = 3

[node name="HSeparator3" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BtnLegitimo" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "‚úÖ Tr√°fico Leg√≠timo"

[node name="BtnMalicioso" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "üö® Scan MALICIOSO"

[node name="BtnPista" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "üí° Ver Pista"

[node name="BtnSiguiente" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "‚û°Ô∏è Siguiente Actividad"
